--- a/Lab_Management.v1/src/main/resources/templates/booking/booking-lab.html
+++ b/Lab_Management.v1/src/main/resources/templates/booking/booking-lab.html
@@ -195,122 +195,12 @@
         var experimentTypes = [[${experimentTypes}]];
         var experimentReports = [[${experimentReports}]];
         var tempGroupId;
-        $(document).ready(function() {
-            checkuser([[${#authentication.name}]]);
-
-            $('#date').val([[${date}]]);
-            $('#experiment_type').prop('disabled','true');
-            $('#experiment_report').prop('disabled','true');
-            $('#lesson').prop('disabled','true');
-            $('#lesson_div').hide();
-
-            $('#experiment_group').change(function () {
-                var groupId = $(this).val();
-                SetExperiment_Type(groupId);
-                tempGroupId = groupId;
-                $('#experiment_report').prop('disabled','true');
-                CheckLesson(ex_group, ex_tpye, ex_report);
-            });
-            $('#experiment_type').change(function () {
-                var typeId = $(this).val();
-                SetExperiment_Report(tempGroupId, typeId)
-                CheckLesson(ex_group, ex_tpye, ex_report);
-            })
-            $('#experiment_group').trigger('change');
-            $('#experiment_type').trigger('change');
-            $('#experiment_report').trigger('change');
-        })
-        function SetExperiment_Type(groupId) {
-            $('#experiment_type').removeAttr('disabled');
-            // Xóa tất cả các option hiện tại trong select experiment_type
-            $('#experiment_type').empty();
-            // Thêm các option mới từ danh sách loại hình thí nghiệm nhận được
-            experimentTypes.forEach(experimentType => {
-                if(experimentType.experimentGroupId == groupId){
-                    $('#experiment_type').append($('<option>', {
-                        value: experimentType.id,
-                        text: experimentType.typeName
-                    }));
-                }
-            });
-        }
-        function SetExperiment_Report(groupId, typeId) {
-            $('#experiment_report').removeAttr('disabled');
-            $('#experiment_report').empty();
-            var experimentTypeIdList
-            // Thêm các option mới từ danh sách loại hình thí nghiệm nhận được
-            experimentReports.forEach(experimentReport => {
-                experimentTypeIdList = StringToList(experimentReport.experimentTypeId);
-                if(experimentReport.experimentGroupId == groupId && experimentTypeIdList.includes(typeId)){
-                    $('#experiment_report').append($('<option>', {
-                        value: experimentReport.id,
-                        text: experimentReport.reportType
-                    }));
-                }
-            });
-        }
-        function StringToList(inputString) {
-            var cleanString = inputString.replace(/\[|\]/g, '');
-            var stringArray = cleanString.split(',');
-            var trimmedArray = stringArray.map(function(item) {
-                return item.trim();
-            });
-            return trimmedArray;
-        }
-
-        /*******************************/
-
+        var username = [[${#authentication.name}]];
+        var date = [[${date}]];
         var lessons = [[${lessons}]];
-        var ex_tpye = $('#experiment_type');
-        var ex_group = $('#experiment_group');
-        var ex_report = $('#experiment_report');
-        var lessonElement = $('#lesson');
-        var lessonDiv = $('#lesson_div');
-
-        function CheckLesson(ex_group, ex_tpye, ex_report) {
-            // if(ex_group.value())
-            var ex_groupId = ex_group.val();
-            var ex_reportId = ex_report.val();
-
-            var result_ex_group = $.grep(experimentGroups, function(group) {
-                return group.id == ex_groupId;
-            });
-            var result_ex_report = $.grep(experimentReports, function(report) {
-                return report.id == ex_reportId;
-            });
-
-            if(result_ex_group[0].groupName==="Đào tạo" && result_ex_report[0].reportType === "Giờ khai thác") {
-                console.log("Tìm thấy.");
-                lessonElement.removeAttr('disabled');
-                lessonDiv.show();
-            } else {
-                console.log("Không tìm thấy");
-                lessonDiv.hide();
-                lessonElement.prop('disabled', 'true');
-            }
-        }
-
-        lessonElement.change(function () {
-            SetLesson();
-        });
-
-        function SetLesson() {
-            var lessonId = lessonElement.val();
-            var result_lesson = $.grep(lessons, function(lesson) {
-                return lesson.id == lessonId;
-            });
-            console.log(result_lesson[0])
-            // $('#name').empty();
-            $('#name').val(result_lesson[0].name);
-            $('#work_time').val(result_lesson[0].workTime)
-        }
-
-
-        // if(result_lesson.length > 0){
-        // }
-
 
     </script>
+    <script src="/js/booking-lab.js"></script>
 
     <!--Multiselect-->
     <script th:src="@{/js/multiselect/bootstrap-multiselect.js}"></script>
@@ -319,29 +209,7 @@
     <!--Input Mask-->
     <script th:src="@{/js/multiselect/input-mask.js}"></script>
     <script th:src="@{/js/multiselect/input-mask-init.js}"></script>
-    <script>
-        function addEqui() {
-            var seriesElement = $('#chosseSeries');
 
-            // Thêm thuộc tính CSS để phóng to phần tử
-            seriesElement.css({
-                'transform': 'scale(1.2)',
-                'transition': 'transform 0.3s ease-in-out', // Thêm transition
-            });
-
-            // Xóa thuộc tính CSS sau 2 giây sử dụng setTimeout
-            setTimeout(function () {
-                seriesElement.css({
-                    'transform': 'none',
-                });
-            }, 1000);
-
-            // Gọi sự kiện focus để mở danh sách các lựa chọn
-            seriesElement.focus();
-        }
-    </script>
-    <br>
-    <br>
 </booking-lab>
 </body>
 </html>
